fixed outline artifacts on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -168,6 +168,7 @@ a:active {
   padding-left: 5px;
   padding-right: 3px;
   outline: 1px solid white;
+  height: 295px;
 }
 .about a{
   color: black;
@@ -193,6 +194,8 @@ a:active {
   grid-template-rows: repeat(2, 80px) 200px;
   outline: 1px solid white;
   padding-top: 7px;
+  height: 170px;
+
 }
 
 .battleTanks-link {
@@ -269,10 +272,10 @@ a:active {
   grid-column-start: 1;
   grid-column-end: 5;
   grid-row-start: 4;
-  outline: 1px solid white;
-
+  
 }
 video{
+  outline: 1px solid white;
   width: 400px;
   padding: 5px;
 }
@@ -285,8 +288,9 @@ video{
   grid-column-start: 1;
   grid-column-end: 5;
   grid-row-start: 3;
-  border-left: 1px solid white;
-  border-right: 1px solid white;
+  /* border-left: 1px solid white;
+  border-right: 1px solid white; */
+  outline: 1px solid white;
   width: 402px;
 }
 
@@ -403,28 +407,29 @@ video{
   
   .project-video {
     justify-self: center;
-    grid-column-start: 7;
+    grid-column-start: 6;
     grid-column-end: 9;
     grid-row-start: 1;
-    outline: 1px solid white;
-    margin-left: 25px;
+    margin-left: 120px;
   }
 
   video{
-    padding: 5px;
-    width: 604px;
+    padding: 8px;
+    width: 575px;
+    outline: 1px solid white;
   }
 
   .project-links {
     display: flex;
-    margin-left: -1;
+    margin-left: -1px;
     padding:10;
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 6;
-    border-left: 1px solid white;
+    /* border-left: 1px solid white;
     border-right: 1px solid white;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid white; */
+    outline: 1px solid white;
     width: 402px;
     height: 45px;
   } 
